# scrcpy

./: local.properties
app/src/: decoder.c  main.c  scrcpy.c  stream.c
server/: CMakeLists.txt  build.gradle
server/src/main/Cpp/: native-lib.cpp
server/src/main/java/com/genymobile/scrcpy/: ScreenEncoder.java  Server.java
x/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
x/app/: config.h  scrcpy
x/meson-logs/: meson-log.txt
